# civiqo

./: .gitignore  AGENT_2_REVIEW_IMPLEMENTATION.md  AUTHENTICATION.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATABASE_MIGRATION_TECHNICAL_ANALYSIS.md  DATABASE_OPTIMIZATION_SUMMARY.md  DEPLOYMENT.md  FIX_DB_SYNC.md  FRESH_START_SCHEMA_DESIGN.md  LICENSE  MIGRATION_COMPLETE.md  NEXT_STEPS.md  OLD-CONV.md  PHASE2_COMPLETION_SUMMARY.md  PROGRESS_UPDATE.md  PROJECT_ROADMAP_FEDERATED.md  PROJECT_ROADMAP_FINAL.md  PROMPT_ANALISI_COMPLETA.md  PR_PHASE2_COMMUNITIES.md  RALPH_WIGGUM_PROMPT.md  README-DEV.md  README.md  RIPRESA_PROGETTO.md  RIPRESA_PROGETTO_FEDERATED.md  SECURITY.md  USER_JOURNEYS.md  VERIFICATION_SUMMARY.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  setup.sh  tailwind.config.js  test-report-20250917-152734.md  test-runner.sh
authorizer/: .cargo-lambda.toml  CACHING_WARNING.md  CONTEXT_INJECTION.md  Cargo.toml  README.md  build.sh  deploy.sh  test-event.json
authorizer/src/: main.rs
backend/: Cargo.toml  Dockerfile.dev  RUSTLS_VALIDATION_REPORT.md  minimal_rustls_test.rs
backend/.sqlx/: query-021ca9f1818897ae44dbfb57fb5d9885773e6a70cbcea4beb9361ae68b26707a.json  query-093aeeaf2e81f562c54155f6d6eda8d391c612fbd4ab84ffb5cd66d4837240bb.json  query-12865db1a0235ef82fcce734030c6668d779586327ed06cc250031cfc7344419.json  query-15391fb030cdad7e673910a8d8a2f7869dea43ab4ef1b0f9dac3567d0bda852d.json  query-1a13d6615d7819525a00b9c59839b974a3ec652564b430990fe154def0621b0f.json  query-1a288143fc9187945b0bf24c69e27e16004722bb3a3960293ffce22c09dcc011.json  query-3981d9c3dca49aea46b83c1c6ac09a1f1c8c511adf15006ec060181f88f0ad32.json  query-44e0e513a85716987b27bdd2b62d6c25e1c97ae56ab8bd79aea53a87154a187f.json  query-4baf26d0d8acc7bce5c7e710c09182373f27c944793ef621a66bc47d42d8e8d2.json  query-4d8c1325c8a7d5c68c8c9f4d47c036c012489387be2ca1e2fd2bf0a797467f3f.json  query-52504a7b5ae601252e58aeb2f42338b0192ad87466029d88c45efc13f07ef335.json  query-5d62590fb5d31c7af18b584906c04165ead9aa21ab989fd8c86c5e14ba220544.json  query-637156447a21c2f719906bb0d94a0794e9c6ae7a491f677d7c9a8c5182eca8b2.json  query-6a0ecf0eb659eca19cd50446135ece32612f2657bfacd62ee1c2f8759be98311.json  query-74837a786b9fba115752319d438e329ceeb04a9068bed0c46b77011af77b076d.json  query-7b7ca7dab3a44dd85133690c0be162acf6b60f42abc43dd585cde3cbff7f55aa.json  query-8ccef4c719e54d5051431588da7e27560a4ea3f61a63869fe73090f702df56e0.json  query-9175e240461cca98cf0b1e5d31eafd463c52ea27e5286f51e7f2f9d0889f6c46.json  query-972e7f59b8d8e309a06fb360ed77f682350df95946485fcb5bd9c672f2ac7389.json  query-97c430031c4dc5c1e450c355a8b756e519d2fe94babe0f01cf2c6a41cbc867e6.json  query-9810cb0ddc6368d61c846fb7c7c5a83edfa1bc5b44aa1a05b2cb493531e273dd.json  query-9eeec2dc8ec23b567b9217a0c12c1a5fe96e4b4773c3a55b3c8c50bc0944b88f.json  query-a1f8f93345030c9c129d4cd5033a9efc99efe48c1b956f3a2b528763f54153dd.json  query-a2b138fdb9a7f57669adba3fe639f029ed7864a055d0a6ba1a33c413c2a99c3e.json  query-a7845ac75bc07828df2436d81075650a60d8bca74bc38eebb414f2c6e75ccaea.json  query-a7a1cb6409eec70f746956c84396bc6032add206e07a0f3ea82c5db5b795e27d.json  query-b9e3af88f5626efdf859c7f1c276f884834309a063c97d396792ebecb8aeca14.json  query-c95b24a28e0981578346c27509e114f16d38b0843abee95d1e7f0ce7db2e114d.json  query-dbd611ff8dda6a698aec9df6214620d4449287dbdde173ec9d198f5f294a9f3b.json  query-dbe13849210729e21d5ac6f7c4bfabdf822676bfc7e586c2decfa6339780945f.json  query-e21e943f93a0c8980107a30ec4144e207a632a0cb5e5af530b21be3981b39387.json  query-e57c73a6e4835b0e1792cb093b5cf04b8ad44edeaecf5008b6f7ea82d91d91a0.json  query-e9e88a36fff960949bec7ffbacc0e07dc5c7e832ac4bf70aa3be77417a423022.json  query-f53c98c3917263c5a99b4b3d850a791ad1c99107b7a1b1a2e81733d82593183c.json
backend/api-gateway/: Cargo.toml  README.md  deploy-prod.toml  deploy-staging.toml
backend/api-gateway/src/: config.rs  lib.rs  main.rs
backend/api-gateway/templates/: communities.html  index.html
backend/api-gateway/tests/: auth_middleware_tests.rs  business_api_tests.rs  comprehensive_api_tests.rs  governance_api_tests.rs  integration_tests.rs  performance_tests.rs  validation_security_tests.rs
backend/chat-service/: Cargo.toml  README.md  deploy-dev.toml
backend/chat-service/src/: config.rs  integration_tests.rs  main.rs  security_integration_tests.rs  state.rs
backend/migrations/: README.md
backend/shared/: Cargo.toml
backend/shared/src/: error.rs  lib.rs  testing.rs  utils.rs
backend/tests/: rustls_validation.rs
src/: 2025-09-17-ok-now-i-want-to-plan-for-fixing-the-current-sta.txt  API_GUIDE.md  AUTH_GUIDE.md  Cargo.toml  CargoLambda.toml  LAMBDA_AUTHORIZER_GUIDE.md  README.md  SECURITY_TEST_REPORT.md  TESTING.md  TEST_CLEANUP_SUMMARY.md  setup_demo_data.sh
src/migrations/: 0007_add_auth0_id_to_users.sql  001_core_users.sql  001_initial.sql  001_initial_schema_with_bigint.sql  002_add_federation_ready_fields.sql  002_business.sql  002_communities.sql  003_businesses.sql  003_community_id_to_uuidv7.sql  003_governance.sql  004_chat.sql  004_content.sql  004_posts_comments_reactions.sql  005_governance.sql  005_seed_data.sql  006_chat.sql  006_fix_nullable_constraints.sql  007_social.sql  008_add_performance_indexes.sql  008_analytics.sql  008_analytics_moderation.sql  009_add_community_members_timestamps.sql  009_single_community.sql  010_membership_system.sql  010_user_profiles_search.sql  011_custom_auth.sql  011_governance_enhancements.sql  012_business_reviews_orders.sql  012_fix_schema_uuid.sql  012_vote_unique_constraint.sql  013_business_reviews_orders.sql  reset_for_single_community.sql
src/migrations/seed/: seed_roles.sql
src/server/: Cargo.toml  deploy-dev.toml
src/server/src/: auth.rs  config.rs  i18n.rs  i18n_tera.rs  lib.rs  main.rs
src/server/templates/: 404.html  500.html  admin.html  base.html  business_detail.html  businesses.html  chat.html  chat_list.html  communities.html  community_detail.html  community_home.html  community_posts.html  (+18 more)
src/shared/: Cargo.toml
src/tests/: rustls_integration.rs  rustls_validation.rs
(+337 files in other folders)
