[workspace]
members = [
    "src/server",
    "src/services/chat-service",
    "src/shared",
    "authorizer"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "rust_decimal"] }

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
rust_decimal = { version = "1.33", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
md5 = "0.7"

# Lambda runtime (for authorizer)
lambda_runtime = "0.13"
aws_lambda_events = "0.15"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# JWT
jsonwebtoken = "9"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower-sessions = "0.14"

# Templates
tera = "1.19"

# Lambda
lambda_http = "0.13"

# AWS SDK
aws-config = "1.1"
aws-sdk-s3 = "1.15"
aws-sdk-sns = "1.15"
aws-sdk-sqs = "1.15"

# Auth
cookie = "0.18"
openidconnect = "3.5"
urlencoding = "2.1"
http = "1.0"

# Environment
dotenvy = "0.15"

# Testing
insta = "1.34"
axum-test = "15.0"
mockall = "0.12"
rstest = "0.18"
serial_test = "3.0"
tempfile = "3.8"
test-case = "3.3"
tokio-test = "0.4"
wiremock = "0.6"

# Utilities
base64 = "0.22"
hex = "0.4"
config = "0.14"

# Crypto
ring = "0.17"
rustls = "0.23"
rustls-native-certs = "0.7"

# Release profiles for all workspace members
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel codegen units to increase optimizations
strip = true        # Strip symbols from binary
