[workspace]
members = [
    "src/server",
    "src/services/chat-service",
    "src/shared",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "rust_decimal"] }

# UUID and time
uuid = { version = "1.0", features = ["v4", "v7", "serde", "std"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
rust_decimal = { version = "1.33", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
md5 = "0.7"

# Password hashing
argon2 = "0.5"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# JWT
jsonwebtoken = "9"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower-sessions = "0.14"

# Templates
tera = "1.19"

# Auth
cookie = "0.18"
urlencoding = "2.1"
http = "1.0"

# Environment
dotenvy = "0.15"

# Testing
insta = "1.34"
axum-test = "15.0"
mockall = "0.12"
rstest = "0.18"
serial_test = "3.0"
tempfile = "3.8"
test-case = "3.3"
tokio-test = "0.4"
wiremock = "0.6"

# Utilities
base64 = "0.22"
hex = "0.4"
config = "0.14"

# Internationalization (i18n)
fluent-templates = "0.9"
unic-langid = "0.9"
accept-language = "3.1"

# Crypto
ring = "0.17"
rustls = "0.23"
rustls-native-certs = "0.7"

# Release profiles for all workspace members
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel codegen units to increase optimizations
strip = true        # Strip symbols from binary
