[package]
name = "authorizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
# Use workspace dependencies
lambda_runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
aws_lambda_events = { workspace = true }
chrono = { workspace = true }

