[workspace]
members = [
    "api-gateway",
    "chat-service",
    "shared"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid"] }

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP and Lambda
lambda_runtime = "0.8"
lambda-web = "0.2.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Auth
jsonwebtoken = "9.0"

# WebSocket
tokio-tungstenite = "0.21"

# AWS SDK
aws-config = "1.0"
aws-sdk-sqs = "1.0"
aws-sdk-sns = "1.0"
aws-sdk-s3 = "1.0"

# Cryptography
ring = "0.17"
base64 = "0.21"

# Configuration
config = "0.13"