[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
config = { workspace = true }

# Additional dependencies for shared code
url = "2.4"
regex = "1.10"