[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "Civiqo - Decentralized community management platform (web server)"
license = "MIT"
repository = "https://github.com/mamureddu/civiqo"
authors = ["Mario Mureddu"]

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
validator = { workspace = true }
md5 = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }

# Shared library
shared = { path = "../shared", features = ["testing"] }

# HTTP client for external APIs
reqwest = { workspace = true }

# Auth and Sessions
tower-sessions = { workspace = true }
http = { workspace = true }
cookie = { workspace = true }
jsonwebtoken = { workspace = true }
urlencoding = { workspace = true }
argon2 = { workspace = true }

# Form parsing
serde_urlencoded = "0.7"

# Validation (already included via workspace)
lazy_static = "1.4"
regex = "1.10"

# Environment
dotenvy = { workspace = true }

# Templating for HTMX
tera = "1.20"

# Internationalization (i18n)
fluent-templates = { workspace = true }
unic-langid = { workspace = true }
accept-language = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
wiremock = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
insta = { workspace = true }
test-case = { workspace = true }
axum-test = "18.0"
jsonwebtoken = { workspace = true }