[package]
name = "chat-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Lambda and WebSocket
lambda_runtime = { workspace = true }
lambda_http = { workspace = true }
tokio-tungstenite = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }

# AWS SDK for SQS/SNS
aws-config = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-sdk-sns = { workspace = true }

# Shared library
shared = { path = "../../shared", features = ["testing"] }

# Additional WebSocket dependencies
futures-util = "0.3"
dashmap = "5.5" # For thread-safe connection tracking
tower-http = { workspace = true } # For CORS and tracing middleware
dotenvy = { workspace = true } # For environment file loading

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
wiremock = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
insta = { workspace = true }
test-case = { workspace = true }
axum-test = "14.0" # For integration testing

# For potential EC2 deployment
[features]
default = ["lambda"]
lambda = []
ec2 = []